# Wepay

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  接入文档.md
plugin-sdk/: CMakeLists.txt  build.sh  插件开发.rar
plugin-sdk/example/: demo_plugin.cpp
plugin-sdk/插件开发/: IPlugin.h  README.md  build.bat  demo_plugin.cpp  plugin.json
sdk/: README.md
sdk/cpp/: CMakeLists.txt  README.md  WePay.h  example.cpp
sdk/csharp/: Example.cs  WePay.cs
sdk/go/: example.go  wepay.go
sdk/http/: EXAMPLES.md  README.md  browser_example.html  curl_example.sh  nodejs_example.js  python_example.py
sdk/java/: Example.java  WePay.java
sdk/php/: WePay.php  example.php
sdk/python/: example.py  wepay.py
src/: AppIncludes.h  gopay_client.hpp  gopay_example.cpp  main.cc
src/admin/: AdminChannelCtrl.h  AdminDashboardCtrl.h  AdminDeviceKeyCtrl.h  AdminEdDSACtrl.h  AdminExtraCtrl.h  AdminLoginCtrl.h  AdminMerchantCtrl.h  AdminReconcileCtrl.h  AdminSettleCtrl.h  AdminSourceCompatCtrl.h  AdminUtilsCtrl.h  AdminWebhookCtrl.h  AgentCtrl.h  ConfigMgrCtrl.h  CustomFormCtrl.h  DivisionCtrl.h  FileUploadCtrl.h  IsvCtrl.h  MchAppCtrl.h  MchStoreCtrl.h  MetadataCtrl.h  MonitorApkCtrl.h  NotifyMgrCtrl.h  OpsCtrl.h  OrderMgrCtrl.h  PayConfigCtrl.h  PluginCtrl.h  PrintCtrl.h  QrcodeMgrCtrl.h  RoleCtrl.h  SysUserCtrl.h  TransferCtrl.h  XpayProxyCtrl.h
src/agent/: AgentExtraCtrl.h  AgentSelfCtrl.h
src/ai/: AiChatCtrl.h  AiSecurityGateway.h  KoboldCppManager.h  KoboldCppService.h
src/alipay/: AlipayCtrl.h  AlipayLib.h
src/channel/: AdapayPlugin.h  AgpayPlusPlugin.h  AlipayCodePlugin.h  AlipayDPlugin.h  AlipayEmailPlugin.h  AlipayExtPlugin.h  AlipayGPlugin.h  AlipayHkPlugin.h  AlipayMonitorPlugin.h  AlipayPlugin.h  AlipayRpPlugin.h  AlipaySandboxPlugin.h  AlipaySlPlugin.h  AllinPayPlugin.h  BepusdtPlugin.h  ChannelPlugin.h  ChinaUmsPlugin.h  CodePayPlugin.h  DgPayPlugin.h  DinPayPlugin.h  DuolabaoPlugin.h  EasypayPlugin.h  EpayPlugin.h  EpayUpstreamPlugin.h  EpaynPlugin.h  FubeiPlugin.h  Fuiou2Plugin.h  GenericPlugins.h  HaipayPlugin.h  HeepayPlugin.h  HlpayPlugin.h  HnaPayPlugin.h  HuifuPlugin.h  HuolianPlugin.h  JdpayPlugin.h  JeepayPlugin.h  JlpayPlugin.h  KayixinPlugin.h  KuaiqianPlugin.h  LakalaPlugin.h  (+42 more)
src/channel/v3/: AdminV3Ctrl.h  AlertNotification.cpp  AlertNotification.h  CMakeLists.txt  CacheOptimizer.cpp  CacheOptimizer.h  DeviceController.cpp  DeviceController.h  DeviceManager.cpp  DeviceManager.h  EmailService.cpp  EmailService.h  GrayscaleManager.cpp  GrayscaleManager.h  HeartbeatController.cpp  HeartbeatController.h  OcrResultCache.cpp  OcrResultCache.h  OcrService.cpp  OcrService.h  OrderService.cpp  OrderService.h  README.md  RocketMQManager.cpp  RocketMQManager.h  SecurityValidator.cpp  SecurityValidator.h  SentinelFlowControl.cpp  SentinelFlowControl.h  WebSocketConnectionManager.cpp  WebSocketConnectionManager.h  WebSocketController.cpp  WebSocketController.h  WepayV3Config.cpp  WepayV3Config.h  WepayV3Plugin.cpp  WepayV3Plugin.h  config.yaml  database.sql  database_postgresql.sql  (+6 more)
src/channel/v3/config/: elk-loki-logging.md  minio-lifecycle.json  nginx.conf  opentelemetry-jaeger.md  postgresql-replication.md  prometheus-grafana.md  proxy_params.conf  redis-sentinel-cluster.md  rocketmq-cluster.md  setup-minio-lifecycle.sh
src/channel/v3/templates/: order_notification.html
src/common/: AesGcmUtils.h  AgPayProxy.h  AjaxResult.h  AppConfigCtrl.h  AppContext.h  Banner.h  BepusdtLib.h  BepusdtProxy.h  BillService.h  CacheService.h  CaptchaCtrl.h  ChannelService.h  ConfigGenerator.h  CrashHandler.h  CronService.h  DatabaseInit.h  DeviceChallengeCache.h  DeviceKeyEnforcement.h  DeviceKeyStatusCtrl.h  DeviceKeyUtils.h  DujiaoLib.h  DujiaoProxy.h  Ed25519Service.h  EdDSAUtils.h  EmbeddedFrontend.h  EpaySign.h  GopayService.h  HardwareFingerprint.h  HttpCaller.h  HttpStatus.h  HttpsRedirect.h  IpVerifyUtils.h  JsonLogger.h  LicenseClient.h  LoginAttemptService.h  Md5Utils.h  MpayProxy.h  MqService.h  MsgNoticeService.h  NacosService.h  (+36 more)
src/device/: DeviceCtrl.h
src/filters/: AdminAuthFilter.h  AgentAuthFilter.h  FiltersRegister.cc  MerchantAuthFilter.h  RateLimitFilter.h  SecurityHeaderFilter.h
src/gateway/: ChannelUserIdCtrl.h  GatewayCtrl.h  GatewayRegistration.h  NotifyCallbackCtrl.h  ReverseProxy.h  SecureGatewayCtrl.h  SimpleOrderCtrl.h  StandardPayCtrl.h  TestNotifyCtrl.h  WeWorkCtrl.h  WsLiveCtrl.h  WsOrderCtrl.h
src/merchant/: MchUserCtrl.h  MerchantChannelCtrl.h  MerchantDeviceKeyCtrl.h  MerchantEdDSACtrl.h  MerchantExtraCtrl.h  MerchantFileUploadCtrl.h  MerchantLoginCtrl.h  MerchantOrderCtrl.h  MerchantRefundCtrl.h  MerchantSettleCtrl.h  MerchantSourceCompatCtrl.h  MerchantTransferCtrl.h
src/notify/: CefBillCtrl.h  NotifyReceiveCtrl.h
src/plugin/: IPlugin.h  PluginManager.h
